<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_standard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_description"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="@dimen/margin_bottom_medium" />

    <Button
        android:id="@+id/btnPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions_button"
        android:layout_marginBottom="@dimen/padding_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions_hint"
        android:textSize="@dimen/text_size_xsmall"
        android:textColor="#666"
        android:layout_marginTop="@dimen/margin_bottom_medium" />

</LinearLayout>